tests/core/data/csl/InterfaceTypeTests/InvalidDeclarations/invalidAttributeName.csl
/*
	Invalid Attribute name that starts with Uppercase
 */
interface invalidAttributeName
{
	readonly attribute 
			string Name;
};


